# docx2md

./: .gitignore  LICENSE  README.md  TESTING.md  __main__.py  docx2md.py  main.py  pyproject.toml  run_tests.py
.github/workflows/: test.yml
tests/: test_docx2md.py  test_file_filtering.py  test_markdown_linting.py  test_sequential_numbering.py  test_title_extraction.py  test_toc_links.py
